# fullask-rest-framework

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
docs/: Makefile  requirements.txt
docs/source/: conf.py
fullask-rest-framework/: cli.py
src/fullask_rest_framework/: cli.py
src/fullask_rest_framework/project_template/config/: common.py.TEMPLATE
