[metadata]
name = fullask-rest-framework
version = 0.0.2.3
url = https://github.com/tgoddessana/flask-rest-framework/
project_urls =
;    Donate = https://palletsprojects.com/donate
;    Documentation = https://flask.palletsprojects.com/
;    Changes = https://flask.palletsprojects.com/changes/
    Source Code = https://github.com/tgoddessana/flask-rest-framework/
    Issue Tracker = https://github.com/tgoddessana/flask-rest-framework/issues
license = MIT
author = TGoddessana
author_email = twicegoddessana1229@gmail.com
maintainer = TGoddessana
maintainer_email = twicegoddessana1229@gmail.com
description = A fully-supported flask extension to build REST API.
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    frf-admin = fullask_rest_framework.cli:main


[coverage:run]
branch = True
source =
    flask
    tests

[coverage:paths]
source =
    src
    */site-packages
